<resources>
    <string name="app_name">Forin</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="order">Pesan</string>
    <string name="nama">Nama</string>
    <string name="catatan">Catatan</string>
    <string name="nomor_meja">Nomor Meja</string>
    <string name="pesan">Pesan</string>
    <string name="admin">Admin</string>
    <string name="tab_text_1">Diproses</string>
    <string name="tab_text_2">Selesai</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu">Menu</string>
    <string name="selesaikan_pesanan">Selesaikan Pesanan</string>
    <string name="batalkan_selesai">Batalkan selesai</string>
    <string name="total">Total :</string>
    <string name="pesanan">Pesanan</string>
    <string name="total_harga">Total : \n Rp.</string>
    <string name="_1">1</string>
</resources>