<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailPesananActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_akhir"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="94dp"
        android:minHeight="60dp"
        app:cardBackgroundColor="#FFDDDD"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/total_harga"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_detail">

        <TextView
            android:id="@+id/tvNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/catatan"
            android:textSize="14sp"
            tools:text="Catatan : sate tidak enak" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/total"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_back_order"
        app:layout_constraintStart_toStartOf="@+id/btn_back_order"
        tools:text="Total : " />

    <TextView
        android:id="@+id/total_harga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_back_order"
        app:layout_constraintEnd_toEndOf="@+id/btn_back_order"
        tools:text="80.000" />

    <Button
        android:id="@+id/btn_back_order"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/btn_pesan"
        android:fontFamily="@font/nunito_sans_bold"
        android:lineHeight="33dp"
        android:text="@string/batalkan_selesai"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>