<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PesananActivity">

    <LinearLayout
        android:id="@+id/wrapper"
        android:layout_width="match_parent"
        android:layout_height="450dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_orders"
            android:layout_width="match_parent"
            android:layout_height="401dp"
            android:clipToPadding="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/item_row_order" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/fr_btn"
        android:padding="16dp">

        <TableLayout
            android:id="@+id/tab_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_nama"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nama" />

                <EditText
                    android:id="@+id/edt_nama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="Masukkan Nama"
                    android:imeOptions="actionDone"
                    android:inputType="text" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

                <TextView
                    android:id="@+id/tv_catatan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/catatan" />

                <EditText
                    android:id="@+id/edt_catatan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="Misal menu makanan jangan pedas/kuahnya dibanyakin"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="3"
                    tools:ignore="LabelFor" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/tv_noMeja"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/nomor_meja" />

                <RadioGroup
                    android:id="@+id/rdg_btnMeja"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rd_btn1"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="24dp"
                        android:background="@drawable/btn_meja_selector"
                        android:button="@android:color/transparent"
                        android:fontFamily="@font/nunito_sans"
                        android:text="@string/_1"
                        android:textAlignment="center"
                        android:textColor="@drawable/text_color_selector"
                        android:textSize="24sp" />

                    <RadioButton
                        android:id="@+id/rd_btn2"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="24dp"
                        android:background="@drawable/btn_meja_selector"
                        android:button="@android:color/transparent"
                        android:fontFamily="@font/nunito_sans"
                        android:text="2"
                        android:textAlignment="center"
                        android:textColor="@drawable/text_color_selector"
                        android:textSize="24sp" />

                    <RadioButton
                        android:id="@+id/rd_btn3"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="24dp"
                        android:background="@drawable/btn_meja_selector"
                        android:button="@android:color/transparent"
                        android:fontFamily="@font/nunito_sans"
                        android:text="3"
                        android:textAlignment="center"
                        android:textColor="@drawable/text_color_selector"
                        android:textSize="24sp" />

                    <RadioButton
                        android:id="@+id/rd_btn4"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="24dp"
                        android:background="@drawable/btn_meja_selector"
                        android:button="@android:color/transparent"
                        android:fontFamily="@font/nunito_sans"
                        android:text="4"
                        android:textAlignment="center"
                        android:textColor="@drawable/text_color_selector"
                        android:textSize="24sp" />

                </RadioGroup>

            </TableRow>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="79dp">

                <RadioGroup
                    android:id="@+id/rdg_btnMeja2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rd_btn5"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="24dp"
                        android:background="@drawable/btn_meja_selector"
                        android:button="@android:color/transparent"
                        android:fontFamily="@font/nunito_sans"
                        android:text="5"
                        android:textAlignment="center"
                        android:textColor="@drawable/text_color_selector"
                        android:textSize="24sp" />

                    <RadioButton
                        android:id="@+id/rd_btn6"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="24dp"
                        android:background="@drawable/btn_meja_selector"
                        android:button="@android:color/transparent"
                        android:fontFamily="@font/nunito_sans"
                        android:text="6"
                        android:textAlignment="center"
                        android:textColor="@drawable/text_color_selector"
                        android:textSize="24sp" />

                    <RadioButton
                        android:id="@+id/rd_btn7"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="24dp"
                        android:background="@drawable/btn_meja_selector"
                        android:button="@android:color/transparent"
                        android:fontFamily="@font/nunito_sans"
                        android:text="7"
                        android:textAlignment="center"
                        android:textColor="@drawable/text_color_selector"
                        android:textSize="24sp" />

                    <RadioButton
                        android:id="@+id/rd_btn8"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="24dp"
                        android:background="@drawable/btn_meja_selector"
                        android:button="@android:color/transparent"
                        android:fontFamily="@font/nunito_sans"
                        android:text="8"
                        android:textAlignment="center"
                        android:textColor="@drawable/text_color_selector"
                        android:textSize="24sp" />

                </RadioGroup>

            </LinearLayout>

        </TableLayout>

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/fr_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/tv_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="5dp"
            android:elevation="8dp"
            android:fontFamily="@font/nunito_sans"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:text="@string/total_harga" />

        <Button
            android:id="@+id/btn_finalOrder"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/btn_pesan"
            android:text="@string/pesan"
            android:gravity="center_vertical|end"
            android:textSize="24sp"
            android:textStyle="bold" />

    </FrameLayout>
</RelativeLayout>