<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_imgFood"
            android:layout_width="126dp"
            android:layout_height="110dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.29000002"
            app:shapeAppearanceOverlay="@style/roundedImageView"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_titleFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/iv_imgFood"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="18sp"
            android:fontFamily="@font/nunito_sans_bold"
            android:textStyle="bold"
            android:textColor="@color/black"
            tools:text="Judul makanan" />

        <TextView
            android:id="@+id/tv_descFood"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/nunito_sans"
            android:singleLine="false"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_imgFood"
            app:layout_constraintTop_toBottomOf="@+id/tv_titleFood"
            tools:text="Deskripsi makanan kaya udang\n gulali mentah ditambah
saus\n tarta rapi dibalut oke" />

        <TextView
            android:id="@+id/tv_priceFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/nunito_sans"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/iv_imgFood"
            app:layout_constraintTop_toBottomOf="@+id/tv_descFood"
            tools:text="25.000"
            android:textColor="#0000FF"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_min"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/border"
            android:backgroundTint="@color/red"
            android:text="@string/minus"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/tv_total"
            app:layout_constraintTop_toBottomOf="@+id/tv_descFood" />

        <TextView
            android:id="@+id/tv_total"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/zero"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/btn_plus"
            app:layout_constraintTop_toBottomOf="@+id/tv_descFood" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_plus"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/border"
            android:backgroundTint="@color/green"
            android:text="@string/plus"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_descFood" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>